[plugins-commons] fix: disable inner-focus when accordion is selected & multiple blocks selected, and wrap accordion with border in this case, to allow user to see that the accordion is selected

--- a/packages/editor-common/web/statics/styles/general.scss
+++ b/packages/editor-common/web/statics/styles/general.scss
@@ -39,6 +39,12 @@
   }
 }
 
+.hideSelection {
+  ::selection{
+    background: transparent;
+  }
+}
+
 .hidden {
   display: none;
 }
